--- a/.github/workflows/build-maven.yml
+++ b/.github/workflows/build-maven.yml
@@ -1,35 +1,18 @@
 name: Build project with Maven
+
 on:
+  push:
   pull_request:
-  merge_group:
-  schedule:
-  - cron: '2 2 * * 1-5' # run nightly master builds on weekdays
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [ '11', '17', '21' ]
-
-    name: Java ${{ matrix.Java }}
     steps:
     - name: Checkout
       uses: actions/checkout@v4
 
     - name: Java setup
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: ${{ matrix.java }}
-
-    - name: Cache
-      uses: actions/cache@v4
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
+      uses: ./.github/actions/java-setup
 
     - name: Run Maven
       run: mvn -B clean -P checkFormat verify
