--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -1,10 +1,11 @@
 name: build-docs
 
 on:
-  pull_request:
-    branches: [main]
-  merge_group:
-    branches: [main]
+  workflow_dispatch:
+#  pull_request:
+#    branches: [main]
+#  merge_group:
+#    branches: [main]
 
 jobs:
   build-docs:
