--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,16 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>FEEL Scala Engine</name>
 
+  <url>http://fluxnova.finos.org</url>
+  <scm>
+    <connection>scm:git:https://github.com/finos/fluxnova-feel-scala.git</connection>
+    <developerConnection>scm:git:https://github.com/finos/fluxnova-feel-scala.git</developerConnection>
+    <url>https://github.com/finos/fluxnova-feel-scala</url>
+    <tag>HEAD</tag>
+  </scm>
+
+
+
   <properties>
     <scala.version>2.13.15</scala.version>
     <scala.binary.version>2.13.6</scala.binary.version>
@@ -433,6 +443,18 @@
           </mapping>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.sonatype.central</groupId>
+        <artifactId>central-publishing-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+      </plugin>
 
     </plugins>
 
@@ -539,6 +561,8 @@
     </repository>
   </repositories>
 
+  <!-- commented as per instruction on https://community.finos.org/docs/development-infrastructure/continuous-integration/java/#artifact-publishing
+  for publishing artifacts on maven central
   <distributionManagement>
     <repository>
       <id>fluxnova-feel-scala</id>
@@ -550,6 +574,6 @@
       <name>GitHub Fluxnova Maven Packages</name>
       <url>https://maven.pkg.github.com/finos/fluxnova-feel-scala</url>
     </snapshotRepository>
-  </distributionManagement>
+  </distributionManagement>-->
 
 </project>
