adding release profile & git setup for maven release

--- a/.github/workflows/publish-central.yaml
+++ b/.github/workflows/publish-central.yaml
@@ -22,6 +22,11 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}                    # or use default GITHUB_TOKEN
+          persist-credentials: true             # allow git push from the job
+          fetch-depth: 0                        # full history so branch refs exist
+          ref: ${{ github.event_name == 'pull_request' && github.head_ref || github.ref_name }}          # checkout the branch (not a detached SHA)
 
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -43,6 +48,10 @@ jobs:
 
       - name: Download deps and plugins
         run: mvn de.qaware.maven:go-offline-maven-plugin:resolve-dependencies -s ./settings.xml
+
+      - name: Configure GitHub authentication for Maven Release Plugin
+        run: |
+          git config --global url."https://${GH_TOKEN}@github.com/".insteadOf "https://github.com/"
 
         #TODO: Remove -DdryRun=true for actual deployment
       - name: Prepare release
