--- a/pom.xml
+++ b/pom.xml
@@ -537,7 +537,6 @@
       </build>
     </profile>
 
-    <!-- TODO : test if release profile gets inherited
     <profile>
       <id>release</id>
       <build>
@@ -568,7 +567,7 @@
               </execution>
             </executions>
           </plugin>
-          < Same as attach-sources profile >
+          <!-- Same as attach-sources profile -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
@@ -586,7 +585,7 @@
           </plugin>
         </plugins>
       </build>
-    </profile-->
+    </profile>
   </profiles>
 
   <licenses>
