--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>org.finos.fluxnova.feel</groupId>
   <artifactId>feel-engine</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>FEEL Scala Engine</name>
 
   <url>http://fluxnova.finos.org</url>
@@ -19,7 +19,7 @@
     <connection>scm:git:https://github.com/finos/fluxnova-feel-scala.git</connection>
     <developerConnection>scm:git:https://github.com/finos/fluxnova-feel-scala.git</developerConnection>
     <url>https://github.com/finos/fluxnova-feel-scala</url>
-    <tag>HEAD</tag>
+    <tag>v1.0.0</tag>
   </scm>
 
 
