--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
   <parent>
     <groupId>org.finos.fluxnova</groupId>
     <artifactId>fluxnova-bpm-release-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <relativePath />
   </parent>
 
   <groupId>org.finos.fluxnova.feel</groupId>
   <artifactId>feel-engine</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.1.0-SNAPSHOT</version>
   <name>FEEL Scala Engine</name>
 
   <url>http://fluxnova.finos.org</url>
